# stget

./: Cargo.toml  README.md  TODO.txt  syncthing_proto.proto
cert/: config.cnf  make_rsa_cert.sh
examples/: deviceid.rs
src/: certificate.rs  lib.rs  session.rs  syncthing_proto.rs  util.rs
