[package]
name = "stget"
version = "0.1.0"
authors = ["Bill Fraser <wfraser@codewise.org>"]
edition = "2021"

[dependencies]
anyhow = "1"
base32 = "0.4"
bufstream = "0.1"
byteorder = "1.0"
clap = "3.1"
env_logger = "0.9"
libc = "0.2"
log = "0.4"
lz4-compression = "0.6"
protobuf = "3"
ring = "0.13.0-alpha"
webpki = "0.18.0-alpha"

[dependencies.rustls]
version = "0.12"
# This feature is needed because we implement our own certificate validation instead of relying on
# any certificate root or web PKI:
features = ["dangerous_configuration"]

[build-dependencies]
protobuf-codegen = "3"
