[package]
name = "stget"
version = "0.1.0"
authors = ["Bill Fraser <wfraser@codewise.org>"]
edition = "2021"

[dependencies]
anyhow = "1"
base32 = "0.4"
bufstream = "0.1"
byteorder = "1.0"
clap = "4"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
lz4-compression = "0.6"
protobuf = "3"
ring = "0.16"
rustls-pemfile = "1"

[dependencies.rustls]
version = "0.20"
# This feature is needed because we implement our own certificate validation instead of relying on
# any certificate root or web PKI:
features = ["dangerous_configuration"]

[build-dependencies]
protobuf-codegen = "3"
